[gd_scene load_steps=2 format=1]

[ext_resource path="res://test/scripts/container.gd" type="Script" id=1]

[node name="container" type="Node2D"]

script/script = ExtResource( 1 )

[node name="orb3" type="Sprite" parent="."]

transform/pos = Vector2( 0, -50 )
transform/scale = Vector2( 0.1, 0.1 )

[node name="orb2" type="Sprite" parent="."]

transform/scale = Vector2( 0.1, 0.1 )

[node name="orb1" type="Sprite" parent="."]

transform/pos = Vector2( 0, 50 )
transform/scale = Vector2( 0.1, 0.1 )


